fix other graphs not showing up and make them better colors

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,6 +17,7 @@ div.dc-chart {
 
 #minerPie,
 #blockHeightPie,
+#orphanPie,
 #weirdTimeBar {
   margin: 26px 0;
   text-align: center;
